--- a/styles/card.css
+++ b/styles/card.css
@@ -37,7 +37,6 @@
     border-radius: 4px;
     background-color: var(--blue);
     border: 0px;
-    height: 5vw;
     color: white;
     font-size: 3vw;
     text-align: center;
@@ -46,9 +45,15 @@
 
 @media screen and (max-width: 600px) {
     .mostseen__card {
-        width: 40%;
+        width: 45%;
     }
-
+    .card__price {
+        font-size: 5vw;
+    }
+    .card__button {
+        padding: 5px 0px;
+        font-size: 3.4vw;
+    }
     .card__subtitle {
         font-size: 4vw;
     }
